syntax = "proto2";
package basic_study;

option go_package = "github.com/yincongcyincong/BasicStudy/proto/api";


message delStudyUserReq {
  optional uint64 id = 1; // id
}
